DRB - 27 - Add all commands